# h3

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  404.html  CHANGELOG  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeTests.cmake  CMakeTests.txt  CNAME  CONTRIBUTING.md  LICENSE  MIGRATION_PLAN.md  NOTICE  README.md  RELEASE.md  VERSION  app-50675b78071ff2b9aa0e.js  app-50675b78071ff2b9aa0e.js.map  app-60fa74651461713b777f.js  app-60fa74651461713b777f.js.map  app-b62f73bcd4e9639e29d3.js  app-b62f73bcd4e9639e29d3.js.map  app-f6e66403717e14ac97e2.js  app-f6e66403717e14ac97e2.js.map  app-ffadda14d834114cbdf0.js  app-ffadda14d834114cbdf0.js.map  appveyor.yml  arr.csv  bench.py  bundle-17748eec9e466c2c98d1.js  bundle-1f20f19437c841a9d53b.js  bundle-2545514a043ddf1e8451.js  bundle-3430398ab5d939027cc9.js  bundle-3b652667f8926ff5b04d.js  (+272 more)
.github/workflows/: cifuzz.yml  coverage-linux.yml  deploy-website.yml  test-bench.yml  test-fuzzer.yml  test-linux.yml  test-macos.yml  test-osx.yml  test-pkg-config.yml  test-valgrind.yml  test-website.yml  test-windows.yml  tests.yml  windows.yml
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  Continuous_cmakeRulesBuildPhase.makeDebug  Experimental_cmakeRulesBuildPhase.makeRelease  NightlyMemoryCheck_cmakeRulesBuildPhase.makeDebug  RUN_TESTS_postBuildPhase.makeRelease  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  bench_benchmarkH3Api_cmakeRulesBuildPhase.makeMinSizeRel  bench_benchmarkH3Api_cmakeRulesBuildPhase.makeRelWithDebInfo  bench_benchmarkPolyfill_cmakeRulesBuildPhase.makeDebug  bench_benchmarkPolyfill_cmakeRulesBuildPhase.makeMinSizeRel  bench_benchmarkPolyfill_cmakeRulesBuildPhase.makeRelease  binding-functions_cmakeRulesBuildPhase.makeRelWithDebInfo  clean-coverage_cmakeRulesBuildPhase.makeMinSizeRel  coverage_cmakeRulesBuildPhase.makeRelWithDebInfo  install_postBuildPhase.makeRelease  kml_cells_0_cmakeRulesBuildPhase.makeMinSizeRel  kml_cells_0_cmakeRulesBuildPhase.makeRelWithDebInfo  kml_cells_0_cmakeRulesBuildPhase.makeRelease  kml_cells_1_cmakeRulesBuildPhase.makeDebug  kml_cells_1_cmakeRulesBuildPhase.makeRelWithDebInfo  kml_cells_1_cmakeRulesBuildPhase.makeRelease  kml_cells_2_cmakeRulesBuildPhase.makeDebug  kml_cells_2_cmakeRulesBuildPhase.makeMinSizeRel  kml_cells_2_cmakeRulesBuildPhase.makeRelWithDebInfo  kml_cells_2_cmakeRulesBuildPhase.makeRelease  kml_cells_3_cmakeRulesBuildPhase.makeDebug  kml_cells_3_cmakeRulesBuildPhase.makeRelWithDebInfo  kml_cells_3_cmakeRulesBuildPhase.makeRelease  kml_centers_0_cmakeRulesBuildPhase.makeMinSizeRel  kml_centers_0_cmakeRulesBuildPhase.makeRelWithDebInfo  kml_centers_1_cmakeRulesBuildPhase.makeDebug  kml_centers_1_cmakeRulesBuildPhase.makeMinSizeRel  kml_centers_1_cmakeRulesBuildPhase.makeRelease  kml_centers_2_cmakeRulesBuildPhase.makeDebug  kml_centers_2_cmakeRulesBuildPhase.makeMinSizeRel  kml_centers_2_cmakeRulesBuildPhase.makeRelWithDebInfo  kml_centers_3_cmakeRulesBuildPhase.makeDebug  kml_centers_3_cmakeRulesBuildPhase.makeMinSizeRel  kml_centers_3_cmakeRulesBuildPhase.makeRelWithDebInfo  (+82 more)
appcache/: manifest.appcache
assets/css/: styles.20ba9856.css  styles.23ad3b2a.css  styles.2779c5a2.css  styles.2ef94739.css  styles.354e01f4.css  styles.3cfc7b1c.css  styles.4525f242.css  styles.8e07868d.css  styles.9521ccab.css  styles.cfa6ca74.css  styles.cfb38308.css
assets/js/: 0058b4c6.eaf47a55.js  02ff1c63.09cb0ca0.js  02ff1c63.27452e0a.js  02ff1c63.2946fb55.js  02ff1c63.30d2f6ec.js  02ff1c63.3db2b642.js  02ff1c63.46ff21e3.js  02ff1c63.5dbd6da9.js  02ff1c63.944936b9.js  02ff1c63.9d595af3.js  02ff1c63.fd6f1c24.js  0480b142.0448f6ed.js  0480b142.1232a53d.js  0480b142.214bede6.js  0480b142.32aaec60.js  0480b142.7df0565e.js  0480b142.a46c1b6c.js  0480b142.aa079a4e.js  0480b142.aa0c76f1.js  05791271.0b0bb824.js  05791271.4e5ab14a.js  05791271.88bd5dd2.js  05791271.98a1c283.js  0b2050d0.073cd074.js  0b2050d0.3b366dd4.js  0b2050d0.42fd99e8.js  0b2050d0.45e915dc.js  0b2050d0.6d132a6a.js  0b2050d0.77ced0c6.js  0b2050d0.97ef3bdf.js  0b2050d0.c41253a4.js  0b2050d0.c59bf16d.js  0b2050d0.c6fe39a5.js  0b2050d0.eac207f5.js  0b2050d0.f24c8fd7.js  0cd7fbf7.83270a60.js  0cd7fbf7.8aa184d8.js  0cd7fbf7.e9c3d0e2.js  0f5b76ef.0d38148e.js  0f5b76ef.1ba8d011.js  (+1279 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
cmake/: CheckAlloca.cmake  CheckGmtime.cmake  CheckVLA.cmake  RunCoverage.cmake.in  TestWrapValgrind.cmake  alloca_test.c  coverage.ps1.in  coverage.sh.in  toolchain.cmake  vla_test.c
dev-docs/: Doxyfile.in  build_windows.md  creating_bindings.md  custom_alloc.md
dev-docs/RFCs/: canonicalization.md  rfc-template.md  terms_for_concepts_and_datatypes.md
doc/: Classes.html  Extensions.html  Global Variables.html  Structs.html  index.html  undocumented.json
doc/Enums/: DistanceUnit.html
doc/Extensions/: Array.html  GeoBoundary.html  GeoPolygon.html
doc/docsets/: .tgz
docs/: Doxyfile.in  README.md  build_windows.md  index.html  table-of-contents.json  usecases.md
docs/3.x/: index.html
docs/api/: distance.md  indexing.md  (+8 more)
examples/: CMakeLists.txt  compact.c  compactCells.c  distance.c  edge.c  edgeVertexes.c  index.c  neighbors.c
h3/: .ycm_extra_conf.py  README.md
h3.xcodeproj/: project.pbxproj
h3.xcworkspace/: contents.xcworkspacedata
h3/examples/: CMakeLists.txt  compact.c  edge.c  neighbors.c
h3Swift/: .gitignore  Exception.swift  Info.plist  h3.swift  h3Swift.h
h3Swift-Universal/: h3Swift_Universal.h
h3SwiftTestApp/: AppDelegate.swift  DecodeViewController.swift  DrawHexagonViewController.swift  Info.plist  MainTableViewController.swift  MapViewController.swift  PolyfillViewController.swift  ViewController.swift
page-data/: app-data.json
scripts/: binding_functions.ps1  binding_functions.sh  coverage.sh.in  make_countries.js  publish_website.sh  update_version.sh
search/: index.html
website/: .gitignore  README.md  docusaurus.config.js  gatsby-config.js  html.config.js  ocular-config.js  package-lock.json  package.json  sidebars.js  styleguide.md  versions.json
(+1011 files in other folders)
